RESOLVED FIXED235952
RealtimeIncomingVideoSourceCocoa should not need to create IOSurfaces
https://bugs.webkit.org/show_bug.cgi?id=235952
Summary RealtimeIncomingVideoSourceCocoa should not need to create IOSurfaces
youenn fablet
Reported 2022-02-01 08:00:28 PST
RealtimeIncomingVideoSourceCocoa should not need to create IOSurfaces
Attachments
Patch (7.78 KB, patch)
2022-02-01 08:19 PST, youenn fablet
no flags
Patch for landing (7.27 KB, patch)
2022-02-03 01:36 PST, youenn fablet
no flags
youenn fablet
Comment 1 2022-02-01 08:19:08 PST
Radar WebKit Bug Importer
Comment 2 2022-02-01 08:39:54 PST
youenn fablet
Comment 3 2022-02-02 06:45:17 PST
Comment on attachment 450530 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450530&action=review > Source/WebCore/platform/mediastream/mac/RealtimeIncomingVideoSourceCocoa.mm:121 > } https://bugs.webkit.org/show_bug.cgi?id=236011 is introducing createInMemoryCVPixelBufferPool we should probably use here.
youenn fablet
Comment 4 2022-02-03 01:36:00 PST
Created attachment 450747 [details] Patch for landing
EWS
Comment 5 2022-02-03 06:08:55 PST
Committed r289049 (246756@main): <https://commits.webkit.org/246756@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450747 [details].
Note You need to log in before you can comment on or make changes to this bug.