RealtimeIncomingVideoSourceCocoa should not need to create IOSurfaces https://bugs.webkit.org/show_bug.cgi?id=235952

Reviewed by Eric Carlson.

Source/WebCore:

Test: webrtc/vp8-then-h264.html

* platform/mediastream/mac/RealtimeIncomingVideoSourceCocoa.mm:
Instead of using an IOSurface-based buffer pool, we use a regular memory buffer pool.
A follow-up should probably remove the need to convert YUV420 webrtc video frames to NV12 CVPixelBuffers in RealtimeIncomingVideoSourceCocoa,
so as to leave that to when copying the webrtc video frames into shared memory buffers used for IPC.

LayoutTests:

* webrtc/vp8-then-h264-expected.txt: Added.
* webrtc/vp8-then-h264.html: Added.



Canonical link: https://commits.webkit.org/246756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289049 268f45cc-cd09-0410-ab3c-d52691b4dbfc